# catLC

./: README.md  main.aux  main.bbl  main.blg  main.out  main.tex  main.toc  preamble.tex
Write-Up/: main.aux  main.bbl  main.blg  main.out  main.tex  main.toc  preamble.tex  references.bib
core/lean/: catLC.lean  renormalization.lean
core/python/: 2d_defect.py  3d_defect.py  curved_field_solver.py  integration.py  requirements.txt  rg_analyzer.py  visualizer.py
core/rust/: Cargo.toml
core/rust/src/: category.rs  functor.rs  lib.rs  macroscopic.rs  main.rs  manifold.rs  mesoscopic.rs  microscopic.rs  rg_flow.rs  visualization_data.rs
tstex_modules/: _api.ts
write-up/: main.aux  main.bbl  main.blg  main.out  main.tex  main.toc  preamble.fdb_latexmk  preamble.fls  preamble.tex  references.bib
