[package]
name = "catlc"
version = "0.1.0"
edition = "2021"
authors = ["Alejandro Soto Franco"]
description = "Category theoretic renormalization group flow calculator for liquid crystals"

[dependencies]
nalgebra = "0.32.3"
thiserror = "1.0.50"
log = "0.4.20"
env_logger = "0.10.0"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
rand = "0.8.5"

[lib]
name = "catlc"
path = "src/lib.rs"

[[bin]]
name = "catlc_cli"
path = "src/main.rs"
